infra/k8s/posts.yaml
apiVersion : v1
kind: Pod
metadata : 
  name : posts
spec :
  containers:
   - name: posts
     image:  first/posts:0.1
